--- a/docs/conventions/tbx.ipynb
+++ b/docs/conventions/tbx.ipynb
@@ -56,6 +56,13 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-04_22:45:57,361 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<StandardName: x_wind [m/s] | SNT: None | desc: x wind component>"
@@ -178,6 +185,14 @@
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_name.py:1195: UserWarning: No URL provided. Will save as dictionary.\n",
+      "  warnings.warn(f'No URL provided. Will save as dictionary.')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -384,36 +399,36 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4341971700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4341971700\">\n",
+       "                        <input id=\"group-ds--4777909000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4777909000\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : Test</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-4342838100\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-4342840700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-4779769600\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-4779774900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-4342840700\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-4779774900\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4343141800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-4343144300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-4343144300\">u</label>\n",
-       "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
+       "                <ul id=\"ds-1-/u-4780321000\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-4780325200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-4780325200\">u</label>\n",
+       "                <span class=\"h5tb-dims\">1.2 (float64)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4344609300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4344612000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4344612000\">v</label>\n",
-       "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
+       "                <ul id=\"ds-1-/v-4782973000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-4782976000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-4782976000\">v</label>\n",
+       "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -431,7 +446,10 @@
     }
    ],
    "source": [
-    "with h5tbx.File(title='MyFile') as h5:\n",
+    "from h5rdmtoolbox import tutorial\n",
+    "snt = tutorial.get_standard_name_table()\n",
+    "\n",
+    "with h5tbx.File(title='MyFile', standard_name_table=snt) as h5:\n",
     "    h5.create_dataset('u', data=1.2,\n",
     "                      units='m/s',\n",
     "                      standard_name='x_velocity')\n",
@@ -465,7 +483,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a9\n",
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.4.0a1\n",
       "/\u001b[1mmygrp\u001b[0m\n",
       "/\u001b[1mothergrp\u001b[0m\n",
       "  \u001b[3ma: long_name\u001b[0m: my other group\n"
@@ -709,12 +727,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4454462100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4454462100\">\n",
+       "                        <input id=\"group-ds--4954849300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4954849300\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -981,6 +999,13 @@
       " > piv-v1\n",
       " > Test-v1\n",
       " > Test_SNC-v1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-04_22:46:00,691 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -1395,31 +1420,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "id": "fbf33dbe-4453-482e-8cd9-2462bf7f81c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.File() as h5:\n",
-    "    h5.create_dataset('zenith angle 1', shape=(3,), units='K', standard_name='zenith_angle')\n",
-    "    h5.create_dataset('zenith angle 2', shape=(3,), units='degree', standard_name='zenith_angle')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-31_13:21:07,538 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-31_13:21:07,538 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-04-04_22:48:15,271 ERROR    [core.py:616] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n",
+      "2023-04-04_22:48:15,271 ERROR    [core.py:616] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
      ]
     }
    ],
+   "source": [
+    "with h5tbx.File(standard_name_table=cf) as h5:\n",
+    "    h5.create_dataset('zenith angle', shape=(3,), units='degree', standard_name='zenith_angle')\n",
+    "    try:\n",
+    "        h5.create_dataset('zenith angle 2', shape=(3,), units='K', standard_name='zenith_angle')\n",
+    "    except h5tbx.conventions.standard_name.StandardNameError as e:\n",
+    "        print(e)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cf.check_file(h5.hdf_filename, raise_error=False)"
    ]
@@ -1434,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "0fd0adab-2a27-456d-96bb-c3f07e9773f6",
    "metadata": {},
    "outputs": [],
@@ -1444,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "ba85f48f-9c41-4a24-b267-c182ff400e2e",
    "metadata": {},
    "outputs": [
@@ -1452,29 +1487,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp906\\tmp11.hdf\" with standard name table \"standard_name_table-v79\"\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp3689\\tmp22.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-31_13:21:24,551 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n",
-      "2023-03-31_13:21:24,551 ERROR    [standard_name.py:937]  > ds: /zenith angle 1: Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"degree\"\n"
+      "2023-04-04_22:48:39,671 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
    "source": [
     "! h5tbx standard_name -f {h5.hdf_filename} -t {cf.versionname}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f10c7e4-8551-4ad6-86b8-6b1bb300d6da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
