--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx\n",
-    "h5tbx.use('default')"
+    "import h5rdmtoolbox as h5tbx"
    ]
   },
   {
