--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
     "\n",
-    "h5tbx.use('default')"
+    "h5tbx.use(None)"
    ]
   },
   {
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 wrapper group \"/mygrp\" (members: 0, convention: \"default\")>]\n"
+      "[<HDF5 wrapper group \"/mygrp\" (members: 0, convention: \"h5py\")>]\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 wrapper group \"/mygrp\" (members: 0, convention: \"default\")>]\n"
+      "[<HDF5 wrapper group \"/mygrp\" (members: 0, convention: \"h5py\")>]\n"
      ]
     }
    ],
@@ -165,8 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: __version of this package\n",
-      "\u001b[3ma: title\u001b[0m: __file title\n"
+      "\u001b[3ma: __h5rdmtoolbox__\u001b[0m: __version of this package\n"
      ]
     }
    ],
@@ -200,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
