--- a/docs/wrapper/NaturalNaming.ipynb
+++ b/docs/wrapper/NaturalNaming.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "44fc86eb-608d-4254-873d-6d4dabd74997",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c5b94c36-c5c2-4c09-b5a8-a4a45ccd401e",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<HDF5 dataset \"test\": shape (3,), type \"<f4\", convention \"default\">\n"
+      "<HDF5 dataset \"test\": shape (3,), type \"<f4\", convention \"h5py\">\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "b2d56e3a-78d8-4149-94dc-1377a0bd0cd6",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "8e030d3d-b0f7-4cb6-b473-d337724953ef",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
